[package]
name = "dioxus-typst"
version = "0.2.0"
edition = "2024"
description = "Typst component for Dioxus"
repository = "https://github.com/RunnersNum40/dioxus-typst"
license = "Apache-2.0"
keywords = ["dioxus", "html", "typst"]
categories = ["text-processing", "web-programming"]

[dependencies]
chrono = "0.4"
dioxus = "0.7"
dirs = { version = "6.0", optional = true }
flate2 = { version = "1", optional = true }
tar = { version = "0.4", optional = true }
typst = "0.14"
typst-html = "0.14"
ureq = { version = "3.1", optional = true }

[features]
download-packages = ["dirs", "flate2", "tar", "ureq"]
